Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
   
+  <!--
+    <img src="http://localhost:3000/imagen/usuarios/5ebebd74ea33de1532d9a84f-108.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZWJlYmQ3NGVhMzNkZTE1MzJkOWE4NGYiLCJub21icmUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQGdtYWlsLmNvbSIsIl9fdiI6MCwiaW1nIjoiNWViZWJkNzRlYTMzZGUxNTMyZDlhODRmLTEwOC5qcGcifSwiaWF0IjoxNTkxNDc2NTc3LCJleHAiOjE1OTE2NDkzNzd9.4Y8pwWhxx5MRtX3oK00Ly_TCiLBsuJPU37MqC0kZKK0" alt=""> 
+  -->
+
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
   <a href="#" onclick="signOut();">Sign out</a>
